--- a/sass/styles/main.sass.css
+++ b/sass/styles/main.sass.css
@@ -371,7 +371,8 @@ a {
 
 nav {
   background-color: #fff;
-  padding: 0.5em 0; }
+  padding: 0.5em 0;
+  margin-left: 0; }
   nav div {
     margin: 0 1em;
     display: inline-block;
@@ -476,9 +477,15 @@ footer {
       text-decoration: underline;
       line-height: 1.6; }
 
-@media screen and (min-width: 55em) {
+@media screen and (min-width: 29.9375em) {
   nav {
-    float: left;
-    height: 100%;
-    padding: 10em 1em;
-    box-sizing: border-box; } }
+    text-align: left; }
+  header {
+    padding: 2.6em 3em; }
+    header h1 {
+      margin: 2.4em 0;
+      font-size: 2.75em; }
+  .info-box .feature-box {
+    padding: 2em 2em 0.6em 2em; }
+  .footer-box {
+    padding: 1.5em; } }
