--- a/sass/styles/main.sass.css
+++ b/sass/styles/main.sass.css
@@ -493,17 +493,34 @@ footer {
 
 @media screen and (min-width: 47.9375em) {
   .price {
-    padding: 2em 0 0 0; }
+    padding: 2em 0 2em 0; }
     .price .price-box {
       display: inline-block;
       padding: 0 0.4em 0 0.4em;
       width: 30%; }
   .info-box {
-    padding: 0; }
+    padding: 0;
+    margin: 0 auto; }
     .info-box .feature-box {
       display: inline-block;
-      width: 40%;
-      padding: 1em 2em;
-      vertical-align: top; }
+      width: 49%;
+      vertical-align: top;
+      padding: 0; }
       .info-box .feature-box > div {
-        padding-top: 1em; } }
+        padding: 1em 1em 1em 1.75em; }
+      .info-box .feature-box > p {
+        margin-top: 0;
+        padding: 0 1.5em 1em 2em; } }
+
+@media screen and (min-width: 61.1875em) {
+  body section {
+    max-width: 61.25em;
+    margin: 0 auto; }
+  .price .price-box {
+    max-width: 19.25em; }
+  .info-box {
+    text-align: center; }
+    .info-box .feature-box {
+      text-align: left;
+      width: 35%;
+      padding: 1em 2.5em 1em 1em; } }
